--- a/views/shared/includes/footer.ejs
+++ b/views/shared/includes/footer.ejs
@@ -30,7 +30,7 @@
             font-size: 28px;
             font-weight: bold;
             margin-bottom: 20px;
-            color: #ff6f61;
+            color: #2d66c2;
             /* Changed to a warmer accent color */
         }
 
